<?xml version="1.0"?>
<package format="2">
  <name>ouster_ros</name>
  <version>0.2.1</version>
  <description>Ouster example ROS client</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>libjsoncpp-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>libtclap-dev</build_depend>
  
  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>gtest</test_depend>

  <export></export>
</package>
