<?xml version="1.0"?>
<package format="2">
  <name>ouster_viz</name>
  <version>0.1.0</version>
  <description>The os1_client package</description>
  <maintainer email="oss@ouster.io">ouster developers</maintainer>
  <license>BSD</license>
  <build_depend>ouster_client</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ouster_client</exec_depend>
  <export></export>
</package>
