[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst
project_urls =
    Bug Tracker = https://github.com/ouster-lidar/ouster_example/issues
    Ouster Customer Support = https://ouster.atlassian.net/servicedesk/customer/portal/8
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: System :: Hardware :: Hardware Drivers
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Image Processing
